# git-aware-coding-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  coverage.xml  pyproject.toml
.agents/: README.md
.claude/: CLAUDE.md
.claude/agents/: avos-researcher.md  avos-session-manager.md
.claude/commands/: avos-ask.md  avos-history.md  avos-ingest-pr.md  avos-session-end.md  avos-session-start.md
.claude/instincts/: avos-workflow.yaml
.codex/: instructions.md
.cursor/plans/: sprint_1_foundation_implementation_54dc2296.plan.md
.cursor/rules/: avos-agent-workflow.mdc
.cursor/skills/avos-history/: SKILL.md
.cursor/skills/avos-ingest-pr/: SKILL.md
.cursor/skills/avos-search/: SKILL.md
.cursor/skills/avos-session/: SKILL.md
.github/workflows/: ci.yml  publish.yml
avos_cli/: __init__.py  exceptions.py
avos_cli/agents/: avos_ask_agent.md  avos_ask_agent_JSON_converter.md  avos_hisotry_agent_JSON_converter.md  avos_history_agent.md  git_diff_agent.md
avos_cli/artifacts/: __init__.py  base.py  commit_builder.py  doc_builder.py  issue_builder.py  pr_builder.py  session_builder.py  wip_builder.py
avos_cli/cli/: main.py
avos_cli/commands/: ask.py  conflicts.py  connect.py  history.py  hook_install.py  hook_sync.py  ingest.py  ingest_pr.py  session_ask.py  session_end.py  session_start.py  session_status.py  team.py  watch.py  worktree_add.py  worktree_init.py
avos_cli/config/: __init__.py  hash_store.py  lock.py  manager.py  state.py  subsystems.py
avos_cli/models/: __init__.py  api.py  artifacts.py  config.py  diff.py  query.py
avos_cli/parsers/: __init__.py  artifact_ref_extractor.py  reference_parser.py
avos_cli/services/: __init__.py  chronology_service.py  citation_validator.py  context_budget_service.py  diff_resolver.py  diff_summary_service.py  git_client.py  github_client.py  llm_client.py  memory_client.py  query_fallback_formatter.py  reply_output_service.py  sanitization_service.py  symbol_extractor.py  watch_watcher.py  watcher.py
avos_cli/utils/: __init__.py  dotenv_load.py  hashing.py  logger.py  output.py  sanitization_diagnostics.py  time_helpers.py
docs/dev/: README.md
docs/user/: README.md  troubleshooting.md
docs/user/commands/: ask.md  conflicts.md  connect.md  history.md  hook-install.md  ingest-pr.md  ingest.md  session-ask.md  session-end.md  session-start.md  session-status.md  team.md  watch.md
tests/cli/: test_cli_commands.py
tests/contract/: __init__.py  test_contract_add_memory.py  test_contract_delete_note.py  test_contract_search.py
tests/fixtures/: github_issues.json  github_prs.json
tests/fixtures/contracts/: add_memory_success.json  error_401.json  error_403.json  error_422.json  error_429.json  error_503.json  search_empty.json  search_success.json
tests/golden/: json_envelope_success.golden
tests/integration/: test_connect_ingest_e2e.py  test_diff_pipeline.py  test_hook_workflows.py  test_install_smoke.py  test_live_collaboration_workflows.py  test_query_error_matrix.py  test_query_workflows.py  test_session_workflows.py
tests/unit/: test_artifact_builders.py  test_benchmark_placeholder.py  test_chronology_service.py  test_ci_config.py  test_citation_validator.py  test_config.py  test_context_budget_service.py  test_fallback_formatter.py  test_git_client.py  test_github_client.py  test_llm_client.py  test_memory_client.py  test_models.py  test_output.py  test_query_exceptions.py  test_query_models.py  test_query_sanitization.py  test_sanitization_diagnostics.py  test_scaffolding.py  test_session_models.py  test_utils.py  test_watcher_service.py
tests/unit/commands/: test_ask.py  test_conflicts.py  test_connect.py  test_history.py  test_hook_install.py  test_hook_sync.py  test_ingest.py  test_ingest_pr.py  test_query_reply_renderers.py  test_session_ask.py  test_session_end.py  test_session_start.py  test_session_status.py  test_team.py  test_watch.py  test_worktree_add.py  test_worktree_init.py
tests/unit/config/: test_hash_store.py  test_lock.py  test_subsystems.py
tests/unit/models/: test_diff_models.py
tests/unit/parsers/: test_artifact_ref_extractor.py  test_reference_parser.py
tests/unit/services/: test_diff_resolver.py  test_diff_summary_service.py  test_reply_output_service.py  test_symbol_extractor.py
