[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["avos_cli"]

# Keep source distributions small for PyPI (demo GIF is linked from README only).
# Exclude local venvs and build artifacts so they are never packed into the sdist.
[tool.hatch.build.targets.sdist]
exclude = [
    "/docs/assets",
    "/.venv-publish-test",
    "/.venv",
    "/venv",
    "/env",
    "/dist",
    "/build",
]

[project]
name = "git-aware-coding-agent"
version = "1.0.0"
description = "Git history and session memory for AI coding agents working in the same repository."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Avos Lab" },
]
keywords = ["cli", "developer-tools", "knowledge-management", "ai-agents", "engineering-memory"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/Avos-Lab/git-aware-coding-agent"
Documentation = "https://github.com/Avos-Lab/git-aware-coding-agent/blob/main/docs/user/README.md"
Source = "https://github.com/Avos-Lab/git-aware-coding-agent"
Issues = "https://github.com/Avos-Lab/git-aware-coding-agent/issues"

[project.optional-dependencies]
full = [
    "anthropic>=0.25.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "respx>=0.21.0",
    "freezegun>=1.4.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
avos = "avos_cli.cli.main:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "UP007",   # use X | Y for union types (we use this intentionally)
    "TC001",   # Runtime imports needed for Pydantic and builder pattern
    "TC003",   # Pydantic needs runtime imports for validation
]

[tool.ruff.lint.isort]
known-first-party = ["avos_cli"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
timeout = 30
markers = [
    "contract: API contract boundary tests",
    "benchmark: performance benchmark tests",
]

[tool.coverage.run]
source = ["avos_cli"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
omit = [
    "avos_cli/utils/output.py",
    "avos_cli/services/llm_client.py",
    "avos_cli/cli/main.py",
]
